# uxarray-mcp-server

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  INSTALLATION.md  PROJECT_SUMMARY.md  PR_REVIEW_AND_PLAN.md  README.md  SECURITY.md  SETUP.sh  config.yaml  config.yaml.example  create-issues.sh  pyproject.toml  test_local.py
.claude/: launch.json
.github/: zizmor.yml
.github/ISSUE_TEMPLATE/: release_request.md
.github/workflows/: ci.yml  monthly-release.yml  release.yml  zizmor.yml
conda/recipe/: meta.yaml
docs/: api.rst  architecture.html  architecture.md  changelog.md  chrysalis.md  conf.py  getting-started.md  globus-compute.md  hpc.md  improv.md  index.rst  onepager-uxarray-mcp.md  operating-an-endpoint.md  provenance.md  release.md  remote-hpc.md  scientific-agent.md  serving.md  tools.md  try-it.md  ucar.md  workflows.md
docs/_static/: custom.css
earth-2/: README.md  RESULTS.md  ufs_replay_demo.py
evals/: README.md
evals/schema_rejection/: README.md  cases.py  run.py
evals/tool_retrieval/: README.md  prompts.py  run.py
notebooks/: no_ai_client_demo.ipynb  no_ai_client_demo.py  toolregistry_demo.ipynb  whats_new_0.2_demo.ipynb  whats_new_0.2_demo.py
prototypes/simboard_bridge/: README.md  client.py  example.py  smoke.py  tools.py
scripts/: agentic_hpc_loop.py  analytic_validation.py  chrysalis_endpoint.sh  figure_style.py  hpc_build_yac.py  hpc_doctor.py  improv_endpoint.sh  make_execution_path_figure.py  make_science_panel.py  make_timing_figure.py  prepare_release.py  test_remote_plotting.py  ucar_endpoint.sh  update_conda_recipe.py  validate_orchestrators.py  yac_smoke_test.py
src/uxarray_mcp/: __init__.py  __main__.py  app.py  cli.py  provenance.py  registry.py  server.py  state.py
src/uxarray_mcp/domain/: __init__.py  area.py  mesh.py  plotting.py  variable.py  vector_calc.py  zonal.py
src/uxarray_mcp/remote/: __init__.py  agent.py  compute_functions.py  config.py  health.py
src/uxarray_mcp/tools/: __init__.py  advanced.py  capabilities.py  catalog.py  execution_control.py  frontdoor.py  inspection.py  orchestration.py  plotting.py  remote_tools.py  scientific_agent.py  stateful.py  vector_calc.py
tests/: conftest.py  test_advanced_tools.py  test_analyze_dataset.py  test_calculate_area.py  test_calculate_zonal_mean.py  test_capabilities.py  test_catalog.py  test_cli.py  test_domain_mesh.py  test_execution_control.py  test_frontdoor_remote_dispatch.py  test_hpc_safety.py  test_inspect_mesh.py  test_inspect_variable.py  test_inspection_tool.py  test_new_uxarray_features.py  test_plotting.py  test_recommended_next_steps.py  test_remote_agent.py  test_remote_remap_live.py  test_scientific_agent.py  test_server.py  test_stateful_tools.py  test_validate_dataset.py  test_vector_calc.py
tests/integration/: test_inspection_integration.py
