[project]
name = "uxarray-mcp"
version = "0.1.0"
description = "MCP server for analyzing unstructured meshes with UXarray"
readme = "README.md"
authors = [
    { name = "Dayan Abdulla", email = "dayanabdulla000@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.4",
    "uxarray>=2025.12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
hpc = [
    "academy-py>=0.3.1",
    "globus-compute-sdk>=4.5.0",
]

[project.scripts]
uxarray-mcp = "uxarray_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
