[project]
name = "uxarray-mcp"
version = "0.2.0"
description = "MCP server for analyzing unstructured meshes with UXarray"
readme = "README.md"
keywords = ["uxarray", "mcp", "unstructured grids", "scientific computing", "globus compute"]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
authors = [
    { name = "Rajeev Jain", email = "rajeeja@gmail.com" },
    { name = "Dayan Abdulla", email = "dayanabdulla000@gmail.com" },
]
license = { file = "LICENSE" }
# Pinned to 3.12 until globus/globus-compute#2139 lands a published submitter ↔
# worker compatibility story. HPC sites broadly ship Python 3.12 conda stacks
# today; matching that minor version on the submitter side avoids WorkerLost
# from pickle protocol skew. Revisit when upstream confirms multi-version
# support and broaden requires-python back to >=3.11.
requires-python = ">=3.12,<3.13"
dependencies = [
    "toolregistry-server[mcp]>=0.3.3",
    "holoviews>=1.19.0",
    "matplotlib>=3.9.0",
    "pyyaml>=6.0",
    "uxarray>=2025.12.0",
]

[project.optional-dependencies]
openapi = [
    "toolregistry-server[openapi]>=0.3.3",
]
hpc = [
    "academy-py>=0.3.1",
    "globus-compute-sdk>=4.5.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-book-theme>=1.1.0",
    "myst-parser>=3.0",
]

[project.scripts]
uxarray-mcp = "uxarray_mcp.cli:main"

[project.urls]
Documentation = "https://uxarray-mcp-server.readthedocs.io"
Source = "https://github.com/UXARRAY/uxarray-mcp-server"
Tracker = "https://github.com/UXARRAY/uxarray-mcp-server/issues"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pre-commit>=4.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.15.2",
]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
# Exclude test files and generated docs
exclude = ["tests/", "docs/"]

[[tool.mypy.overrides]]
# yaml stubs are installed in pre-commit env via types-PyYAML;
# suppress the missing-stubs warning in local runs without them.
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# academy is an optional HPC dependency; the fallback stubs use type: ignore
# which are unused when academy is installed in the pre-commit env.
module = "uxarray_mcp.remote.agent"
warn_unused_ignores = false

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
extend-exclude = ["docs/architecture.html"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["uxarray_mcp"]

[tool.ruff.format]
docstring-code-format = true
